# Rice-Backup

./: backup_excludes  generate-bkp.sh  restore.sh
backup/config/: kdeglobals
backup/config/Code - OSS/User/: keybindings.json
backup/config/Code/User/: settings.json
backup/config/Kvantum/wallbash/: wallbash.kvconfig
backup/config/dunst/: dunst.conf  dunstrc
backup/config/hypr/: hypridle.conf  hyprlock.conf  keybindings.conf  monitors.conf
backup/config/hypr/hyprlock/: bluetooth.sh  greeting.sh  network.sh
backup/config/hypr/themes/: colors.conf  wallbash.conf
backup/config/kitty/: theme.conf
backup/config/qt6ct/: colors.conf
backup/config/rofi/: theme.rasi
backup/config/starship/: starship.toml
backup/config/vim/colors/: wallbash.vim
backup/config/waybar/: config.jsonc  landscape.jsonc  portrait.jsonc  style.css  theme.css
backup/config/waybar/includes/: includes.json
backup/config/waybar/modules/: custom-autorotate-menu.jsonc  custom-battery-conservation.jsonc  custom-hyde-menu.jsonc  custom-osk.jsonc  custom-wallchange.jsonc  custom-weather.jsonc  pulseaudio#microphone.jsonc
backup/config/zsh/: .zcompdump  .zcompdump-archprt15-5.9  .zcompdump-archprt15-5.9.zwc  .zsh_history  .zshrc
backup/local/hyde/: hyprland.conf
backup/local/hyde/menus/: autorotate.xml
backup/local/waybar/menus/: autorotate.xml  hyde-menu.xml
backup/script/user/: battery-conservation-toggle.sh  fix-hid-dongles.sh  linuxflip_ctrl.sh  monitors-orientation-watch.sh  weather.rs
backup/script/user/weather/: Cargo.toml
backup/script/user/weather/src/: main.rs
(+2072 files in other folders)
